--- a/competitors/static/competitors/css/tpbase.css
+++ b/competitors/static/competitors/css/tpbase.css
@@ -1,176 +1,113 @@
-body{
-	min-width: 1024px;
-}
-#main{
-	width: 1024px;
-	margin: 10px auto 50px;
-}
-
-#tabs{
-	margin-top:20px; 
-	background: rgba(160,160,160,0.5);
-	min-height: 500px;
-	padding: 0;
-}
-
-#tabs>ul{
-	padding: 0;
-}
-
-#tabs>ul>li{
-	margin: 0;
-	width: 25%;
-}
-
-#tabs>ul>li>a{
-	margin: 0;
-	width: 100%;
-	text-align: center;
-}
-
-#tabs form label{
+#panel>div{
 	display: none;
 }
-#tabs form input,#tabs form textarea{
-	width: 100%;
-	margin: 5px auto;
+#logo{
+	width: 200px;
+}
+#logo *{
+	text-align: center;
 }
 
-#tabs form button{
-	width: 100%;
+#icon_img{
+	width: 200px;
+	height: 200px;
+}
+
+#logo>a{
 	display: block;
+	margin: 0 auto;
 }
 
-#news .panel{
-	height: 50px;
-	text-align: left;
-	font-size: 50px;
-	padding-left: 30px;
-	margin-bottom: 1px;
-	margin-left: -20px;
-	margin-right: -20px;
+#logo button{
+	width: 150px; 	
+	margin: 0 auto;
 }
 
-#news .panel:first-child{
-	margin-top:-16px;
+/*.ui-tabs-nav>*{
+	width: 32%;
+}*/
+
+/*.ul-tabs-nav li{
+	padding: 0;
 }
 
-#news .panel h4{
-	font-size: 28px;
-	font-family: montserrat
-}
-#news .panel a:hover{
-	text-decoration: none;
-	color: rgba(255,0,0,0.3);
+.ui-tabs-nav a{
+	padding-left: 0;
+
+	text-align: center;
+		
+}*/
+body {
+	background-color: #A9A9A9 !important;
 }
 
-#news .panel>div{
+
+.radio {
+	padding-left: 1em;
+}
+
+#row1 {
+	margin-top: 150px;
+	margin-bottom: 10px;
+	padding: 20px 10px;
+}
+
+#row2, #pagination {
+	margin: 10px auto;
+	padding: 0;
+}
+
+#news1, #news2 {
+	height: 250px;
+	margin: 10px auto;
+}
+
+.cp-box {
+	background-color: rgba(255,255,255,0.7);
+  	padding: 15px;
+  	margin-top:15px;
+}
+
+.cp-box-flex{
+	display: -moz-box;
+  	display: -webkit-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+}
+
+.cp-box-schedule:nth-child(2n+1){
+	padding-left: 0;
+}
+
+.cp-box-schedule:nth-child(2n){
+	padding-right: 0;
+}
+
+.cp-schedule-box {
+	height: 250px;
+	padding: 15px;
+}
+
+#schedules {
+	padding: 0;
+}
+
+.tab-pane {
+	height: 600px;
+	background: white;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	padding: 10% 20%;
+}
+
+
+#img-wrapper {
+	margin: 0px 10px;
+	border: 5px solid white;
+	box-shadow: 5px 5px 5px #888888;
+	height: 300px;
 	width: 300px;
-	display: inline-block;
-	text-align: left;
-	font-family: serif;
-	margin: 10px 5px;
-	vertical-align: middle;
-}
-
-#news [type=button]{
-	margin-left: -20px;
-	margin-top: -20px;
-}
-
-#schedule .panel{
-	height: 100px;
-	text-align: center;
-	margin-bottom: 1px;
-	margin-left: -20px;
-	margin-right: -20px;
-}
-
-#schedule .panel:first-child{
-	margin-top:-16px;
-}
-
-#schedule .panel>div{
-	width: 300px;
-	display: inline-block;
-	text-align: center;
-	margin: 10px 5px;
-	vertical-align: middle;
-}
-
-#match_img{
-	width: 50px;
-	height: 50px;
-}
-
-#player_list .panel{
-  height: 100px;
-  padding-right: 10px;
-  background: rgba(160,160,160,0.5);
-}
-
-#player_list{
-  margin: 0 auto;
-  text-align: center;
-}
-
-.recommend_each{
-  margin: 10px;
-  display: inline;
-}
-
-.recommend_each *{
-  color: black;
-  text-align: left;
-}
-
-.recommend_each div{
-  display: inline-block;
-}
-
-.recommend_each img{
-  margin: 10px 5px;
-  width: 80px;
-  height: 80px;
-}
-
-#forum>div>.panel{
-	margin-bottom:1px; 
-	height: 50px;
-}
-
-#forum>div>.panel:hover{
-	background: rgba(242,123,45,0.5);
-}
-
-#forum>div>.panel>*{
-	display: inline;
-}
-
-#forum>div>.panel>.panel{
-	line-height: 50px;
-	height: 30px;
-	width: 60px;
-	background: rgba(160,160,160,0.6);
-	margin-left: 20px;
-	text-align: center;
-}
-
-#forum>div>.panel>a{
-	margin-left: 20px;
-}
-
-#forum>div>.panel>.postinfo{
-	line-height: 50px;
-	float: right;
-	margin-right: 20px;
-}
-
-#forum>div>.panel>.postinfo a{
-	font-size: 5px;
-	text-decoration: underline;
-}
-
-#forum>div>.panel>.postinfo *{
-	display: inline;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
