--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -1,8 +1,7 @@
 {% extends "competitors/base.html" %}
 {% block main %}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/person.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/profile.css">
-<div id="body" style="height:1200px;" ng-controller="profile">
+<div id="body" style="height:1200px;" ng-controller="profile" ng-init="self='{{currentUser.user.username}}' == '{{user.username}}'">
     <div id="header">
     </div>
     {% for error in errors %}
@@ -24,10 +23,10 @@
         <div class="panel panel-default col-md-offset-2 col-md-8 cp-profile-nav">
             <div class="panel-body row ">
                 <div class="col-md-4 cp-profile-nav-content">
-                    <a href="#personal" ng-click="currentTab='personal';change($event)">Personal</a>
+                    <a href="#personal" ng-click="currentTab='personal';change($event);getUserProfile()">Personal</a>
                 </div>
                 <div class="col-md-4 cp-profile-nav-content">
-                    <a href="#favorite#//currentFavoriteTab//" ng-click="currentTab='favorite';change($event)">Favorite</a>
+                    <a href="#favorite#//currentFavoriteTab//" ng-click="currentTab='favorite';change($event);getFavorite()">Favorite</a>
                 </div>
                 <div class="col-md-4 cp-profile-nav-content">
                     <a href="#friends" ng-click="currentTab='friends';change($event)">Friends</a>
@@ -46,8 +45,8 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             Essential Info &nbsp;&nbsp;&nbsp;
-                            <a ng-show="!editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                            <a ng-show="editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
+                            <a ng-show="!editPrimary && self" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                            <a ng-show="editPrimary && self" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
 
                         </div>
 
@@ -57,27 +56,27 @@
                                     <label for="inputEmail3" class="col-sm-2 control-label cp-profile-form-label">Username</label>
                                     <div class="col-sm-9">
                                         <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.username}}</p>
-                                        <input ng-show="editPrimary" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                        <input ng-show="editPrimary" type="text" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Firstname</label>
                                     <div class="col-sm-9">
                                         <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.first_name}}</p>
-                                        <input type="password" ng-show="editPrimary" class="form-control" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="Password">
+                                        <input type="text" ng-show="editPrimary" class="form-control" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="Password">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Lastname</label>
                                     <div class="col-sm-9">
                                         <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.last_name}}</p>
-                                        <input type="password" ng-show="editPrimary" value="{{currentUser.user.last_name}}" class="form-control" id="inputPassword3" placeholder="Password">
+                                        <input type="text" ng-show="editPrimary" value="{{currentUser.user.last_name}}" class="form-control" id="inputPassword3" placeholder="Password">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Birthday</label>
                                     <div class="col-sm-9">
-                                        <p class="form-control-static" ng-show="!editPrimary">{{userprofile.birthday}}</p>
+                                        <p class="form-control-static" ng-show="!editPrimary">//birthday//</p>
                                         <input type="date" ng-show="editPrimary" value="{{userprofile.birthday}}" class="form-control" id="inputPassword3" placeholder="Password">
                                     </div>
                                 </div>
@@ -88,8 +87,8 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             Contact Info &nbsp;&nbsp;&nbsp;
-                            <a ng-show="!editSocial" href="javascript:;" ng-click="editSocial=!editSocial" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                            <a ng-show="editSocial" href="javascript:;" ng-click="editSocial=!editSocial" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
+                            <a ng-show="!editSocial && self" href="javascript:;" ng-click="editSocial=!editSocial" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                            <a ng-show="editSocial && self" href="javascript:;" ng-click="editSocial=!editSocial" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
                         </div>
                         <div class="panel-body text-left">
                             <form class="form-horizontal">
@@ -104,21 +103,21 @@
                                     <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-facebook-official fa-fw"></i> Facebook</p></label>
                                     <div class="col-sm-9">
                                         <p class="form-control-static" ng-show="!editSocial">//social.facebook//</p>
-                                        <input ng-show="editSocial" type="email" class="form-control input" value="//social.facebook//" id="inputEmail3" placeholder="Email">
+                                        <input ng-show="editSocial" type="text" class="form-control input" value="//social.facebook//" id="inputEmail3" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-twitter fa-fw"></i> Twitter</p></label>
                                     <div class="col-sm-9">
                                         <p class="form-control-static" ng-show="!editSocial">//social.twitter//</p>
-                                        <input ng-show="editSocial" type="email" class="form-control input" value="//social.twitter//" id="inputEmail3" placeholder="Email">
+                                        <input ng-show="editSocial" type="text" class="form-control input" value="//social.twitter//" id="inputEmail3" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-instagram fa-fw"></i> Intsagram</p></label>
                                     <div class="col-sm-9">
                                         <p class="form-control-static" ng-show="!editSocial">//social.instagram//</p>
-                                        <input ng-show="editSocial" type="email" class="form-control input" value="//social.instagram//" id="inputEmail3" placeholder="Email">
+                                        <input ng-show="editSocial" type="text" class="form-control input" value="//social.instagram//" id="inputEmail3" placeholder="Email">
                                     </div>
                                 </div>
 
@@ -132,46 +131,46 @@
         </div>
         <div class="" id="favorite" ng-show="currentTab=='favorite'">
             <ul class="nav nav-tabs" id="tabs">
-                <li role="presentation" ng-class="{'active':currentFavoriteTab=='teams'}"><a href="#favorite#teams" ng-click="currentFavoriteTab='teams'"><span class="glyphicon glyphicon-user" aria-hidden="true">Favorite Teams</a></li>
-                <li role="presentation" ng-class="{'active':currentFavoriteTab=='players'}"><a href="#favorite#players" currentFavoriteTab='players'><span class="glyphicon glyphicon-star" aria-hidden="true">Favorite Players</a></li>
+                <li role="presentation" ng-class="{'active':currentFavoriteTab=='teams'}"><a href="#favorite#teams" ng-click="currentFavoriteTab='teams';getFavorite();"><span class="glyphicon glyphicon-user" aria-hidden="true">Favorite Teams</a></li>
+                <li role="presentation" ng-class="{'active':currentFavoriteTab=='players'}"><a href="#favorite#players" ng-click="currentFavoriteTab='players';getFavorite();"><span class="glyphicon glyphicon-star" aria-hidden="true">Favorite Players</a></li>
             </ul>
             <br/>
             <div class="tab-content">
                 <div class="tab-pane cp-profile-pane" id="teams" ng-class="{'active':currentFavoriteTab=='teams'}">
-                    {% for team in teamfollows %}
-                        <div class="panel panel-default">
+
+                        <div class="panel panel-default" ng-repeat="team in favoriteteams">
                             <div class="panel-heading">
-                                {{team.name}}
+                                //team.fields.name//
                             </div>
                             <div class="panel-body row">
                                 <div class="col-sm-3">
-                                    <img style="width:100%;" src="{{team.icon_url}}"/>
+                                    <img style="width:100%;" ng-src="//team.fields.icon_url//"/>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{team.followers.count}}
+                                    //team.fields.followers.length//
                                 </div>
                             </div>
 
                         </div>
-                    {% endfor %}
+
                 </div>
                 <div class="tab-pane cp-profile-pane" id="players" ng-class="{'active':currentFavoriteTab=='players'}">
-                    {% for player in playerfollows %}
-                        <div class="panel panel-default">
+
+                        <div class="panel panel-default" ng-repeat="player in favoriteplayers">
                             <div class="panel-heading">
-                                {{player.name}}
+                                //player.fields.name//
                             </div>
                             <div class="panel-body row">
                                 <div class="col-sm-3">
-                                    <img style="width:100%;" src="{{player.icon_url}}"/>
+                                    <img style="width:100%;" ng-src="//player.fields.icon_url//"/>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{player.followers.count}}
+                                    //player.fields.followers.length//
                                 </div>
                             </div>
 
                         </div>
-                    {% endfor %}
+
                 </div>
             </div>
         </div>
@@ -181,77 +180,5 @@
     </div>
 </div>
 <script src="{{STATIC_URL}}competitors/js/directives/imgUpload.js"></script>
-<script type="text/javascript">
-competitorsApp.controller('profile',['$scope', function($scope){
-    var queries = window.location.hash.substring(1).split('#');
-    console.log(queries);
-    for (var i in queries){
-        console.log(queries[i]);
-        if (queries[i]=="personal" || queries[i]=="favorite" || queries[i] == "friends"){
-            $scope.currentTab=queries[i];
-        }
-        if (queries[i]=="players" || queries[i]=="teams" ){
-            $scope.currentFavoriteTab=queries[i];
-        }
-    }
-    if ($scope.currentTab!="personal" && $scope.currentTab!="favorite" && $scope.currentTab!="friends"){
-        $scope.currentTab = "personal";
-    }
-    if ($scope.currentFavoriteTab != "players" && $scope.currentFavoriteTab!="teams"){
-        $scope.currentFavoriteTab = "teams";
-    }
-    $scope.editPrimary = false;
-    $scope.editSocial = false;
-    $scope.birthday = "{{userprofile.birthday}}"
-    console.log("{{userprofile.birthday}}");
-    $scope.social = {
-        "facebook":"{{userprofile.facebook}}",
-        "google+":"{{userprofile.googleplus}}",
-        "email":"{{userprofile.user.email}}",
-        "twitter":"{{userprofile.twitter}}",
-        "instagram":"{{userprofile.instagram}}"
-    }
-
-    {% if currentUser.user.username = user.username %}
-        $scope.self = true;
-    {% endif %}
-
-    $scope.change = function($event){
-        // $event.preventDefault();
-    }
-}])
-    $('#tabs').click(function(e) {
-        $('#tabs .active').removeClass('active');
-        $(e.target).parents().addClass('active');
-    });
-
-    $("#tabs a").click(function (e) {
-        $(this).tab('show');
-    });
-
-    $('.glyphicon-pencil').click(function(e) {
-    });
-    function save_pic(){
-    console.log(name)
-    var file = $("#img_url").attr('value')
-        $.ajax({
-            type: "post",
-            url: "/save_pic",
-            data: {
-                'userAdjustedImage': file,
-                'csrfmiddlewaretoken': token,
-                },
-
-            enctype: 'multipart/form-data',
-
-            success: function() {
-                alert("Yea");
-                     location.reload(true)
-                 },
-            error: function(e) {
-                    alert(e);
-                  },
-        })
-}
-</script>
+<script src="{{STATIC_URL}}competitors/js/controllers/profile.js"></script>
 {% endblock %}
