--- a/competitors/templates/competitors/tpbase.html
+++ b/competitors/templates/competitors/tpbase.html
@@ -1,95 +1,224 @@
 {% extends "competitors/base.html" %}
 {% block main %}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/tpbase.css">
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<script src="{{STATIC_URL}}competitors/js/jquery.twbsPagination.min.js"></script>
-	<input id="cid" type="hidden" value="{{cid}}">
-	<input id="totalposts" type="hidden" value="{{totalposts}}">
-	<input id="page" type="hidden" value="{{page}}">
-	<div id="main">
-	{% block tp %}
-	{% endblock%}
-	<div id="tabs">
-	  	<ul>
-		    <li><a href="#news">News</a></li>
-		    <li><a href="#data">Data</a></li>
-		    <li><a href="#schedule">Schedule</a></li>
-		    <li><a href="#forum">Forum</a></li>
-	  	</ul>
-	  	<div id="news">
-	  		{% if editor %}
-	  			<a href="{% firstof request.path '/' %}/add_news"><input type='button' class="btn btn-primary" value="Add News"></a>
-	  		{% endif %}
-	  			{% for item in news %}
-	  			<div class="panel">
-	  				<a href="{% url 'get_news' item.id %}"><h4>{{item.title}}</h4></a>
-	  			</div>
-	  			{% endfor %}
+	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/tpbase.css">
+	<div class="container" ng-controller="tpbase">
+		{% block tp %}
+		{% endblock %}
+	
+		<div id="row2">
+			<div class="btn-group btn-group-justified" role="group" aria-label="...">
+		 			<a href="#news" class="btn btn-default" ng-click="currentTab='news'" ng-class="{active:currentTab=='news'}">News</a>
+					<a href="#schedule" class="btn btn-default" ng-click="currentTab='schedule'" ng-class="{active:currentTab=='schedule'}">Schedule</a>
+					<a href="#data" class="btn btn-default" ng-click="currentTab='data'" ng-class="{active:currentTab=='data'}">Data</a>
+					<a href="#forum" class="btn btn-default" ng-click="currentTab='forum'" ng-class="{active:currentTab=='forum'}">Forum</a>
+			</div>
+		</div>
 
-	  	</div>
-	  	<div id="data">
-	  		<div id="basic_info">
+		<div id="news" ng-show="currentTab=='news'">
+			<!-- <div class="cp-box" id="news1" style="padding:15px">
+				<div id="news1-img" style="width:220px;height:100%;float:left;margin-right:15px;">
+					<img style="height:100%" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+				</div>
+				<div style="display:inline;">
+					<h3 style="margin-top:0;">Breaking News</h3>
+					<h5>中新网8月13日电 综合消息，8月12日23时30分许，天津港国际物流中心区域内瑞海公司所属危险品仓库发生的爆炸，截至目前已造成多人死亡。[详细]</h5>
+				</div>
+			</div>
+			<div class="cp-box" id="news2" style="padding:15px">
+				<div id="news1-img" style="width:220px;height:100%;float:left;margin-right:15px;">
+					<img style="height:100%" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+				</div>
+				<div style="display:inline;">
+					<h3 style="margin-top:0;">Breaking News</h3>
+					<h5>中新网8月13日电 综合消息，8月12日23时30分许，天津港国际物流中心区域内瑞海公司所属危险品仓库发生的爆炸，截至目前已造成多人死亡。[详细]</h5>
+				</div>
+			</div> -->
+			{% for item in news %}
+			<div class="cp-box" id="news2" style="padding:15px">
+				<div id="news1-img" style="width:220px;height:100%;float:left;margin-right:15px;">
+					<img style="height:100%" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+				</div>
+				<div style="display:inline;">
+					<h3 style="margin-top:0;">{{item.title}}</h3>
+					<h5>{{item.content}}</h5>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		<div class="" id="schedule" ng-show="currentTab=='schedule'" style="padding:-15px;">
+			<!-- <div class="col-sm-6 col-md-6 cp-box-schedule" id="schedule1" style="">
+				<div class="cp-box cp-box-flex">
+					<div class="col-sm-4">
+						<img style="width:100%;height:100%" src="/static/competitors/img/soccer/england/t_manchesterunited.png">
+						<h5 style="text-align:center">Manchester United</h5>
+					</div>
+					<div class="col-sm-4" style="text-align:center">
+						<h1>VS</h1>
+						<h5>Premier League</h5>
+						<h5>Old Traford</h5>
+						<h5>Aug 4,2015 12:00 UTC</h5>
+					</div>
+					<div class="col-sm-4">
+						<img style="width:100%;height:100%" src="/static/competitors/img/soccer/england/t_chelsea.png">
+						<h5 style="text-align:center">Chelsea</h5>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-6 cp-box-schedule" id="schedule2" style="">
+				<div class="cp-box cp-box-flex">
+					<div class="col-sm-4">
+						<img style="width:100%;height:100%" src="/static/competitors/img/soccer/england/t_manchesterunited.png">
+						<h5 style="text-align:center">Manchester United</h5>
+					</div>
+					<div class="col-sm-4" style="text-align:center">
+						<h1>VS</h1>
+						<h5>Premier League</h5>
+						<h5>Old Traford</h5>
+						<h5>Aug 4,2015 12:00 UTC</h5>
+					</div>
+					<div class="col-sm-4">
+						<img style="width:100%;height:100%" src="/static/competitors/img/soccer/england/t_chelsea.png">
+						<h5 style="text-align:center">Chelsea</h5>
+					</div>
+				</div>
+			</div> -->
+			{% for match in matches %}
+			<div class="col-sm-6 col-md-6 cp-box-schedule" id="schedule2" style="">
+				<div class="cp-box cp-box-flex">
+					<div class="col-sm-4">
+						<img style="width:100%;height:100%" src="{{match.home.icon_url}}">
+						<h5 style="text-align:center">{{match.home}}</h5>
+					</div>
+					<div class="col-sm-4" style="text-align:center">
+						<h1>VS</h1>
+						<h5>Premier League</h5>
+						<h5>Old Traford</h5>
+						<h5>{{match.time}}</h5>
+					</div>
+					<div class="col-sm-4">
+						<img style="width:100%;height:100%" src="{{match.away.icon_url}}">
+						<h5 style="text-align:center">{{match.away}}</h5>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		<div id="data" ng-show="currentTab=='data'">
+			<div class="cp-box" id="news1" style="padding:15px">
+				<div id="news1-img" style="width:220px;height:100%;float:left;margin-right:15px;">
+					<img style="height:100%" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+				</div>
+				<div style="display:inline;">
+					<h5 style="margin-top:0;">Full Name: Manchester United Football Club</h5>
+					<h5>Nick Name: Red Devils</h5>
+					<h5>Home:Old Trafford, Manchester, UK</h5>
+					<h5>Capacity:76,000</h5>
+					<h5>Manager:Louis Van Gaal</h5>
+					<h5>Chairman:Glazer</h5>
+					<h5>League:Premier League, England</h5>
+					<h5></h5>
+
+				</div>
+			</div>
+			<div class="cp-box cp-box-flex" style="padding:15px;">
+					<span>Manchester United Football Club is a professional football club based in Old Trafford, Greater Manchester, England. The club currently play in the Premier League, the top flight of English football. Founded as Newton Heath LYR Football Club in 1878, the club changed its name to Manchester United in 1902 and moved to Old Trafford in 1910.
+
+					Manchester United have won 20 league titles, the most of any English club, 11 FA Cups, four League Cups and a record 20 FA Community Shields. The club has also won three European Cups, one UEFA Cup Winners' Cup, one UEFA Super Cup, one Intercontinental Cup and one FIFA Club World Cup. In 1998–99, the club achieved a treble of the Premier League, the FA Cup and the UEFA Champions League.
+
+					The 1958 Munich air disaster claimed the lives of eight players. In 1968, under the management of Matt Busby, Manchester United was the first English football club to win the European Cup. Alex Ferguson won 28 major honours between 1986 and 2013,[3][4] when he announced his retirement. Louis van Gaal was appointed as the club's new manager after Ferguson's successor David Moyes was sacked after only 10 months in charge.
+
+					Manchester United was the second highest-earning football club in the world for 2013–14, with annual revenue of €518 million,[5][6] and the world's third most valuable football club in 2015, valued at $1.98 billion.[7] As of June 2015, it is the world's most valuable football brand, estimated to be worth $1.2 billion.[8][9] It is one of the most widely supported football teams in the world.[10][11] After being floated on the London Stock Exchange in 1991, the club was purchased by Malcolm Glazer in May 2005 in a deal valuing the club at almost £800 million, after which the company was taken private again. In August 2012, Manchester United made an initial public offering on the New York Stock Exchange.</span>
+			</div>
+			<div class="cp-box"  style="padding:15px">
+				<h2>HONORS</h2>
+				<p>Premier League Champions: 2010-2011 2009-2010</p>
+				<p>Champions League:2007-2008,1998-1999</p>
 
 			</div>
-			<div id="player_list">
-				{% for player in players %}
-					<div class="recommend_each">
-	                    <a href="{% url 'player_page' player.id %}">
-	                        <div class="panel">
-	                            <div class="recommend_each_img">
-	                                <img src="{{player.icon_url}}"/>
-	                            </div>
-	                            <div class="recommend_each_info">
-	                                <h6>{{player.name}}</h6>
-	                                <h6>{{player.followers.count}}</h6>
-	                            </div>
-	                        </div>
-	                    </a>
-	                </div>
-				{% endfor %}
-			</div>
-			<div id="records">
-			</div>
-	  	</div>
-	  	<div id="schedule">
-	  		{% for match in matches %}
-	  			<div class="panel">
-	  				<div>
-	  					<img id="match_img" src="{{match.home.icon_url}}">
-	  					<h5>{{match.home}}</h5>
-	  				</div>
-	  				<div>
-	  					<p>vs</p>
-	  					<p>{{match.time}}</p>
-	  					<a href="{% url 'live_page' match.id %}">Watch LIVE</a>
-	  				</div>
-	  				<div>
-	  					<img id="match_img" src="{{match.away.icon_url}}">
-	  					<h5>{{match.away}}<h5>
-	  				</div>
-	  			</div>
-	  		{% endfor %}
-	  	</div>
-	  	<div id="forum">
-	  		<div id="forum-posts">
+		</div>
+
+		<div id="forum" ng-show="currentTab=='forum'">
+			<div id="forum-posts">
+				<div class="cp-box row" style="padding:15px;margin-left:0;margin-right:0;margin-bottom:10px;">
+					<div class="col-sm-9">
+						<div>
+							<a href="{% url 'get_post' post.id %}" target="_blank"><h4 style="margin-top:0;;display:inline">Man United Profile</h4></a>
+							
+						</div>
+	<!-- 					<div class="">
+							{{post.comments.count}}
+						</div> -->
+						<div style="margin:10px 0">
+							<span>Manchester United Football Club is a professional football club based in Old Trafford, Greater Manchester, England. The club currently play in the Premier League, the top flight of English football. Founded as Newton Heath LYR Football Club in 1878, the club changed its name to Manchester United in 1902 and moved to Old Trafford in 1910.</span>
+						</div>
+						<div style="height:130px;margin-top:15px">
+							<img style="width:100px;height:100px" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+							<img style="width:100px;height:100px" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+							<img style="width:100px;height:100px" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+						</div>
+					</div>
+					<div class="col-sm-3" style="text-align:right;position:relative;height:226px;">
+						<h5 style="">maot</h5>
+						<h5 style="">2 hours ago</h5>
+
+						<h5 style="vertical-align:bottom;position:absolute;bottom:0;right:15px;"><i class="fa fa-commenting fa-lg"></i>23<span>  </span><i class="fa fa-heart fa-lg"></i>21</h5>
+						<div class="postinfo">
+							{% if can_manage == True %}
+								<a class="btn btn-link" onclick="deleteit({{post.id}})"><p>Delete</p></a>
+							{% endif %}
+						</div>
+					</div>
+				</div>
 			{% for post in posts %}
-				<div class="panel">
-					<div class="panel">
+				<div class="cp-box row" style="padding:15px;margin-left:0;margin-right:0;margin-bottom:10px;">
+					<div class="col-sm-9">
+						<div>
+							<a href="{% url 'get_post' post.id %}" target="_blank"><h4 style="margin-top:0;;display:inline">{{post.title}}</h4></a>
+							
+						</div>
+	<!-- 					<div class="">
+							{{post.comments.count}}
+						</div> -->
+						<div style="margin:10px 0">
+							<span>Manchester United Football Club is a professional football club based in Old Trafford, Greater Manchester, England. The club currently play in the Premier League, the top flight of English football. Founded as Newton Heath LYR Football Club in 1878, the club changed its name to Manchester United in 1902 and moved to Old Trafford in 1910.</span>
+						</div>
+						<div style="height:130px;margin-top:15px">
+							<img style="width:100px;height:100px" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+							<img style="width:100px;height:100px" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+							<img style="width:100px;height:100px" src="http://m.tiebaimg.com/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ddafcc20ce58163843836ed0b446f589&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F241f95cad1c8a786a27631bf6609c93d70cf5026.jpg">
+						</div>
+					</div>
+					<div class="col-sm-3" style="text-align:right;position:relative;height:226px;">
+						<h5 style="">{{post.user}}</h5>
+						<h5 style="">2 hours ago</h5>
+
+						<h5 style="vertical-align:bottom;position:absolute;bottom:0;right:15px;"><i class="fa fa-commenting fa-lg"></i>{{post.comments.count}}<span>  </span><i class="fa fa-heart fa-lg"></i>21</h5>
+						<div class="postinfo">
+							{% if can_manage == True %}
+								<a class="btn btn-link" onclick="deleteit({{post.id}})"><p>Delete</p></a>
+							{% endif %}
+						</div>
+					</div>
+				</div>
+				<!-- <div class="cp-box" style="padding:15px">
+					<div>
+						<a href="{% url 'get_post' post.id %}" target="_blank"><h4 style="margin:0;display:inline">{{post.title}}</h4></a>
+						<h5 style="float:right;">{{post.user}}</h5>
+					</div>
+					<div class="">
 						{{post.comments.count}}
 					</div>
-					<a href="{% url 'get_post' post.id %}" target="_blank">{{post.title}}</a>
+					
 					<div class="postinfo">
-						<p>{{post.user}}</p>
+						<p></p>
 						{% if can_manage == True %}
 							<a class="btn btn-link" onclick="deleteit({{post.id}})"><p>Delete</p></a>
 						{% endif %}
 					</div>
-				</div>
+				</div> -->
 			{% endfor %}
 			</div>
-			<form method="POST" action="{% url 'add_post' %}">
+			<form method="POST" action="{% url 'add_post' %}" class="cp-box">
 				<input type="hidden" name="redirecturl" value="{% firstof request.path '/' %}">
 				{% if team %}
 					<input type="hidden" name="cat" value="team">
@@ -99,20 +228,43 @@
 					<input type="hidden" name="cat" value="player">
 					<input type="hidden" name="id" value="{{player.id}}">
 				{% endif %}
-				{{form}}
+				{% for field in form %}
+				<div class="form-group">
+					{{field}}
+				</div>
+				{% endfor %}
 				{% csrf_token %}
-				{% if user.is_authenticated %}
-					<button type="submit" class="btn btn-success">POST</button>
-				{% else %}
-					<button type="submit" class="btn btn-success" disabled>SIGN IN TO POST</button>
-				{% endif %}
+				<div class="">
+					{% if user.is_authenticated %}
+						<button type="submit" class="btn btn-success">POST</button>
+					{% else %}
+						<button type="submit" class="btn btn-success" disabled>SIGN IN TO POST</button>
+					{% endif %}
+				</div>
 			</form>
-	  	</div>
-	</div>
-</div>
+		</div>
 
-	<script>
-		$( "#tabs" ).tabs();
-	</script>
-	<script type="text/javascript" src="{{STATIC_URL}}competitors/js/tpbase.js"></script>
-	{% endblock %}
+		<div class="" id="pagination">
+			<nav class="pull-right">
+			  <ul class="pagination">
+			    <li>
+			      <a href="#" aria-label="Previous">
+			        <span aria-hidden="true">&laquo;</span>
+			      </a>
+			    </li>
+			    <li><a href="#">1</a></li>
+			    <li><a href="#">2</a></li>
+			    <li><a href="#">3</a></li>
+			    <li><a href="#">4</a></li>
+			    <li><a href="#">5</a></li>
+			    <li>
+			      <a href="#" aria-label="Next">
+			        <span aria-hidden="true">&raquo;</span>
+			      </a>
+			    </li>
+			  </ul>
+			</nav>
+		</div>
+	</div>
+<script src="{{STATIC_URL}}competitors/js/controllers/tpbase.js"></script>
+{% endblock %}
