--- a/competitors/templates/competitors/base.html
+++ b/competitors/templates/competitors/base.html
@@ -1,53 +1,27 @@
-<!doctype HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en" ng-app="competitorsApp">
 <head>
-  <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/bootstrap-3.3.4/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/bootstrap-3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
-  <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/base.css">
-  <title>Competitor</title>
+<title>Competitors</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- <script src="{{STATIC_URL}}competitors/js/jquery/jquery.min.js"></script> -->
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+<!-- Awesome Icon -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/base.css">
+<script src="{{STATIC_URL}}competitors/js/app.js"></script>
 </head>
-<body>
-  <input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
-  <div id="navbar">
-    <div id="title">
-      {% if homepage != True %}
-        <a href="{% url 'home' %}"><h2>Competitors</h2></a>
-        <div class="navbar_search">
-          <form class="form-inline" method="POST" action="{% url 'search' %}">
-              <div class="form-group">
-                <label class="sr-only" for="nav_search">Search: </label>
-                <input type="text" class="form-control" id="nav_search" name="search" required="required" placeholder="Search Your Favorite">
-              </div>
-              <button type="submit" class="btn btn-success">Find</button>
-              {% csrf_token %}
-          </form>
-        </div>
-      {% endif %}
-      <div>
-        <a id="search_link" href="{% url 'search_page' %}">Search By Category</a>
-      </div>
-      {% if user.is_authenticated %}
-          <a id="sign" href="{% url 'django.contrib.auth.views.logout' %}?next={% firstof request.path %}"><button class="btn btn-danger">sign out</button></a>
-          <a id="redirect" href="{% url 'see_profile' user.username %}"><button class="btn btn-link btn-lg">{{ user.username }}</button></a>
-      {% else %}
-          <a id="sign" href="{% url 'register' %}"><button class="btn btn-info">Sign Up</button></a>
-          <a id="redirect" href="#" onclick="popSignFlow(1)"><button class="btn btn-primary">Sign In</button></a>
-      {% endif %}
-    </div>
-  </div>
-  <div id="main">
-  {% csrf_token %}
 
-  {% block main %}
-  {% endblock %}
-  </div>
-  <div id="footer">
-    <h6>maot@copyright</h6>
-  </div>
-  <script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery-2.1.3.min.js"></script>
-  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  <script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
-  <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
-  </body>
+<body>
+{% include 'competitors/navbar.html' %}
+{% block main %}
+{% endblock %}
+{% include 'competitors/footer.html' %}
+</body>
 </html>
